--- a/_posts/2015-08-08-menu_creation_using_swing.html
+++ b/_posts/2015-08-08-menu_creation_using_swing.html
@@ -24,18 +24,7 @@ categories: Java Swing Review
 </div>
 <div class="col-md-5">
 
-[java]public interface Controller {
-
-    /** Open file action listener. **/
-    void open(ActionEvent event);
-
-    /** Save file action listener. **/
-    void save(ActionEvent event);
-
-    /** Exit action listener. **/
-    void exit(ActionEvent event);
-
-}[/java]
+<script src="https://gist.github.com/Faylixe/0e8a9f92d0791c3a7777.js"></script>
 
 </div>
 </div>
