--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="row">
     <a href="{{ post.url | prepend: site.baseurl }}" class="undecorated">
       <div class="post_entry">
-        <span class="label label-default">{{ post.date | date: "%b %-d, %Y" }}</span>
+        <span class="label label-default">{{ post.date | date: "%b %d, %Y" }}</span>
         <span class="title">{{ post.title }}</span>
       </div>
     </a>
