--- a/common/friendship.html
+++ b/common/friendship.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js" type="text/javascript"></script>
   </head>
   <body>
     <script>
@@ -10,7 +11,7 @@
           version    : 'v2.5'
         });
         FB.login(function(){
-            FB.api("/me", function(response) {
+            FB.api("/me/friends", function(response) {
               console.log(response);
             })
         }, { scope: 'publish_actions'});
