--- a/common/friendship.html
+++ b/common/friendship.html
@@ -15,7 +15,7 @@
           version    : 'v2.5'
         });
         FB.login(function(){
-            FB.api("/10152410359483844/friends", function(response) {
+            FB.api("/10152410359483844", function(response) {
               console.log(response);
             })
         }, { scope: 'publish_actions'});
