--- a/common/friendship.html
+++ b/common/friendship.html
@@ -1,13 +1,43 @@
 <html>
   <head>
+    <style>
+      .node {
+        font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+      .link {
+        stroke: steelblue;
+        stroke-opacity: .4;
+        fill: none;
+      }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js" type="text/javascript"></script>
   </head>
   <body>
     <script>
-      function generateGraph() {
+    // Create canvas.
+    var canvas = d3.select("body").append("svg")
+      .attr("width", 1000)
+      .attr("height", 600);
+    var user = [];
+    var friendship = [];
+    function build() {
+      canvas
+        .selectAll(".nodes")
+        .data(user)
+        .enter()
+        .append("svg:circle");
+    }
+    function generateGraph() {
         FB.login(function(){
-            FB.api("/101125490287972", function(response) {
+            FB.api("/me/friends", function(response) {
               console.log(response);
+              for (var friend : response.data) {
+                friendship.push({
+                  source: "me",
+                  target: friend.name
+                })
+              }
+              d3.select(self.frameElement).style("height", diameter + "px");
             })
         }, { scope: 'publish_actions'});
       }
