Updates resume headline style.

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@ layout: default
     Master’s degree - Software engineering (2011 - 2013)
     Bachelor’s degree - Computer science (2008 - 2011)
 
-    <h1>Projects (more at https://github.com/Faylixe)
+    <h1>Projects (more at https://github.com/Faylixe)</h1>
 
     Tradergo - http://tradergo.club
     Developed Android client and contributed to the AWS based backend.
