--- a/resume.html
+++ b/resume.html
@@ -8,32 +8,28 @@ layout: default
     felix.voituret@gmail.com
 
     <h1>Work history</h1>
-
     <h2>Research and development engineer - Kware, Aix en provence, France (September 2013 - Present)</h2>
-
-    Developed Eclipse plugins to improve documentation and coding process.
-    Developed JUnit extension for providing server based test environment.
-    Developed multithreading facilities, and parallel workflow management system.
-    Optimized a Lexicalization algorithm which leads to a 30% speedup.
-    Redesigned code architecture for a web document retrieval algorithm and internal distribution solution.
-    Developed generation tools for internal database solution.
-    Developed distributed web crawler for indexing e-Commerce website.
-    Developed internal indexing API and integrated Apache Lucene and Apache Solr engines.
-    Redesigned internal DAO solution using previously developed indexing API.
-
+    <ul>
+        <li>Developed Eclipse plugins to improve documentation and coding process.</li>
+        <li>Developed JUnit extension for providing server based test environment.</li>
+        <li>Developed multithreading facilities, and parallel workflow management system.</li>
+        <li>Optimized a Lexicalization algorithm which leads to a 30% speedup.</li>
+        <li>Redesigned code architecture for a web document retrieval algorithm and internal distribution solution.</li>
+        <li>Developed generation tools for internal database solution.</li>
+        <li>Developed distributed web crawler for indexing e-Commerce website.</li>
+        <li>Developed internal indexing API and integrated Apache Lucene and Apache Solr engines.</li>
+        <li>Redesigned internal DAO solution using previously developed indexing API.</li>
+    </ul>
     <h2>Teacher - Université d’Avignon et des Pays de Vaucluse, Avignon, France (September 2013 - Present)</h2>
-
-    Delivered software engineering course and testing course for master degree, 30 hours per year.
-
+    <ul><li>Delivered software engineering course and testing course for master degree, 30 hours per year.</li></ul>
     <h2>Research assistant - LIA, Avignon, France (June 2011 - July 2013)</h2>
-
-    Participated to research for the coupled problem of land use and network design.
-    Implemented operation research algorithm for Quadratic Assignment Problem (QAP).
-    Implemented a decision support tool to relocate set of facility through a transportation network.
-    Co-authored « Decouple accessibility and automobile mobility in urban areas » for the Transport Research Arena 2014 conference.
-
+    <ul>
+        <li>Participated to research for the coupled problem of land use and network design.</li>
+        <li>Implemented operation research algorithm for Quadratic Assignment Problem (QAP).</li>
+        <li>Implemented a decision support tool to relocate set of facility through a transportation network.</li>
+        <li>Co-authored « Decouple accessibility and automobile mobility in urban areas » for the Transport Research Arena 2014 conference.</li>
+    </ul>
     <h1>Education</h1>
-
     Université d’Avignon et des Pays de Vaucluse - France
     Master’s degree - Software engineering (2011 - 2013)
     Bachelor’s degree - Computer science (2008 - 2011)
