--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@ layout: default
     felix.voituret@gmail.com
 
     <h1>Work history</h1>
-    <h2>Research and development engineer - Kware, Aix en provence, France (September 2013 - Present)</h2>
+    <h2><span class="title">Research and development engineer</span> - Kware, Aix en provence, France (September 2013 - Present)</h2>
     <ul>
         <li>Developed Eclipse plugins to improve documentation and coding process.</li>
         <li>Developed JUnit extension for providing server based test environment.</li>
