--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@ layout: default
     felix.voituret@gmail.com
 
     <h1>Work history</h1>
-    <h2><span class="title">Research and development engineer</span> - Kware, Aix en provence, France (September 2013 - Present)</h2>
+    <h2><span class="title">Research and development engineer</span> - <i>Kware, Aix en provence, France (September 2013 - Present)</i></h2>
     <ul>
         <li>Developed Eclipse plugins to improve documentation and coding process.</li>
         <li>Developed JUnit extension for providing server based test environment.</li>
@@ -20,9 +20,9 @@ layout: default
         <li>Developed internal indexing API and integrated Apache Lucene and Apache Solr engines.</li>
         <li>Redesigned internal DAO solution using previously developed indexing API.</li>
     </ul>
-    <h2>Teacher - Université d’Avignon et des Pays de Vaucluse, Avignon, France (September 2013 - Present)</h2>
+    <h2><span class="title">Teacher</span> - <i>Université d’Avignon et des Pays de Vaucluse, Avignon, France (September 2013 - Present)</i></h2>
     <ul><li>Delivered software engineering course and testing course for master degree, 30 hours per year.</li></ul>
-    <h2>Research assistant - LIA, Avignon, France (June 2011 - July 2013)</h2>
+    <h2><span class="title">Research assistant</span> - <i>LIA, Avignon, France (June 2011 - July 2013)</i></h2>
     <ul>
         <li>Participated to research for the coupled problem of land use and network design.</li>
         <li>Implemented operation research algorithm for Quadratic Assignment Problem (QAP).</li>
