--- a/resume.html
+++ b/resume.html
@@ -30,21 +30,21 @@ layout: default
         <li>Co-authored « Decouple accessibility and automobile mobility in urban areas » for the Transport Research Arena 2014 conference.</li>
     </ul>
     <h1>Education</h1>
-    <p><b>Université d’Avignon et des Pays de Vaucluse</b> - France</p>
-    <p>Master’s degree - Software engineering (2011 - 2013)</p>
-    <p>Bachelor’s degree - Computer science (2008 - 2011)</p>
+    <b>Université d’Avignon et des Pays de Vaucluse</b> - <i>France</i><br/>
+    Master’s degree - Software engineering (2011 - 2013)<br/>
+    Bachelor’s degree - Computer science (2008 - 2011)<br/>
     <h1>Projects (more at https://github.com/Faylixe)</h1>
-    <p><b>Tradergo</b> - http://tradergo.club</p>
-    <p>Developed Android client and contributed to the AWS based backend.</p>
+    <b>Tradergo</b> - http://tradergo.club<br/>
+    Developed Android client and contributed to the AWS based backend.<br/>
     <br/>
-    <p><b>PiBooth</b> - http://github.com/Faylixe/pibooth</p>
-    <p>Developed a photo booth software for RaspberryPi platform, including social sharing features.</p>
+    <b>PiBooth</b> - http://github.com/Faylixe/pibooth<br/>
+    Developed a photo booth software for RaspberryPi platform, including social sharing features.<br/>
     <br/>
-    <p><b>Google code jam API</b> - http://github.com/Faylixe/googlecodejam-client</p>
-    <p>Reversed google code jam platform API and implemented Java client for it.</p>
+    <b>Google code jam API</b> - http://github.com/Faylixe/googlecodejam-client<br/>
+    Reversed google code jam platform API and implemented Java client for it.<br/>
     <br/>
-    <p><b>Jammy</b> - http://faylixe.fr/jammy</p>
-    <p>Implemented set of Eclipse plugin for managing Google code jam development.</p>
+    <b>Jammy</b> - http://faylixe.fr/jammy<br/>
+    Implemented set of Eclipse plugin for managing Google code jam development.<br/>
     <h1>Certifications (details at http://faylixe.fr/certs)</h1>
 
     Android associate developper (Google)
