--- a/resume.html
+++ b/resume.html
@@ -34,16 +34,16 @@ layout: default
     Master’s degree - Software engineering (2011 - 2013)<br/>
     Bachelor’s degree - Computer science (2008 - 2011)<br/>
     <h1>Projects (more at https://github.com/Faylixe)</h1>
-    <b>Tradergo</b> - http://tradergo.club<br/>
+    <b>Tradergo</b> - <a href="http://tradergo.club">http://tradergo.club</a><br/>
     Developed Android client and contributed to the AWS based backend.<br/>
     <br/>
-    <b>PiBooth</b> - http://github.com/Faylixe/pibooth<br/>
+    <b>PiBooth</b> - <a href="http://github.com/Faylixe/pibooth">http://github.com/Faylixe/pibooth</a><br/>
     Developed a photo booth software for RaspberryPi platform, including social sharing features.<br/>
     <br/>
-    <b>Google code jam API</b> - http://github.com/Faylixe/googlecodejam-client<br/>
+    <b>Google code jam API</b> - <a href="http://github.com/Faylixe/googlecodejam-client">http://github.com/Faylixe/googlecodejam-client</a><br/>
     Reversed google code jam platform API and implemented Java client for it.<br/>
     <br/>
-    <b>Jammy</b> - http://faylixe.fr/jammy<br/>
+    <b>Jammy</b> - <a href="http://faylixe.fr/jammy">http://faylixe.fr/jammy</a><br/>
     Implemented set of Eclipse plugin for managing Google code jam development.<br/>
     <h1>Certifications (details at http://faylixe.fr/certs)</h1>
 
