Finalizes style and format.

--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@ layout: default
     <b>Université d’Avignon et des Pays de Vaucluse</b> - <i>France</i><br/>
     Master’s degree - Software engineering (2011 - 2013)<br/>
     Bachelor’s degree - Computer science (2008 - 2011)<br/>
-    <h1>Projects (more at https://github.com/Faylixe)</h1>
+    <h1>Projects <span class="tiny">(more at https://github.com/Faylixe)</span></h1>
     <b>Tradergo</b> - <a href="http://tradergo.club">http://tradergo.club</a><br/>
     Developed Android client and contributed to the AWS based backend.<br/>
     <br/>
@@ -45,13 +45,14 @@ layout: default
     <br/>
     <b>Jammy</b> - <a href="http://faylixe.fr/jammy">http://faylixe.fr/jammy</a><br/>
     Implemented set of Eclipse plugin for managing Google code jam development.<br/>
-    <h1>Certifications (details at http://faylixe.fr/certs)</h1>
-
-    Android associate developper (Google)
-
+    <h1>Certifications <span class="tiny">(details at http://faylixe.fr/certs)</span></h1>
+    <ul>
+        <li>Android associate developper (Google)</li>
+    </ul>
     <h1>Languages and Technologies</h1>
-
-    Java 6/7/8, Equinox OSGi, Lua, Python, Flask, jQuery, HTML
-    Git, SVN, Maven, Docker, Heroku, Apache SolrCloud, Zookeeper
-    UNIX based system, iOS, OSX, Android
+    <ul>
+        <li>Java 6/7/8, Equinox OSGi, Lua, Python, Flask, jQuery, HTML</li>
+        <li>Git, SVN, Maven, Docker, Heroku, Apache SolrCloud, Zookeeper</li>
+        <li>UNIX based system, iOS, OSX, Android</li>
+    </ul>
 </div>
