--- a/resume.html
+++ b/resume.html
@@ -1,12 +1,8 @@
 ---
 layout: default
 ---
-
+<h1>Félix Voituret - Software engineer (<a href="http://faylixe.fr/download/documents/resume.pdf">PDF version</a>)</h1>
 <div id="resume">
-    Félix Voituret
-    +(33)  648957546
-    felix.voituret@gmail.com
-
     <h1>Work history</h1>
     <h2><span class="title">Research and development engineer</span> - <i>Kware, Aix en provence, France (September 2013 - Present)</i></h2>
     <ul>
