--- a/images/social/index.html
+++ b/images/social/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script type="text/javascript">
-			window.location.href = "http://classdesign.review/";
+			window.location.href = "http://faylixe.fr/";
 		</script>
 	</head>
 	<body></body>
