--- a/resume.html
+++ b/resume.html
@@ -30,12 +30,6 @@ layout: default
     Master’s degree - Software engineering (2011 - 2013)<br/>
     Bachelor’s degree - Computer science (2008 - 2011)<br/>
     <h1>Projects <span class="tiny">(more at https://github.com/Faylixe)</span></h1>
-    <b>Tradergo</b> - <a href="http://tradergo.club">http://tradergo.club</a><br/>
-    Developed Android client and contributed to the AWS based backend.<br/>
-    <br/>
-    <b>PiBooth</b> - <a href="http://github.com/Faylixe/pibooth">http://github.com/Faylixe/pibooth</a><br/>
-    Developed a photo booth software for RaspberryPi platform, including social sharing features.<br/>
-    <br/>
     <b>Google code jam API</b> - <a href="http://github.com/Faylixe/googlecodejam-client">http://github.com/Faylixe/googlecodejam-client</a><br/>
     Reversed google code jam platform API and implemented Java client for it.<br/>
     <br/>
@@ -47,8 +41,8 @@ layout: default
     </ul>
     <h1>Languages and Technologies</h1>
     <ul>
-        <li>Java 6/7/8, Equinox OSGi, Lua, Python, Flask, jQuery, HTML</li>
-        <li>Git, SVN, Maven, Docker, Heroku, Apache SolrCloud, Zookeeper</li>
+        <li>Java, Python, Lua</li>
+        <li>Git, SVN, Maven, Docker, Heroku</li>
         <li>UNIX based system, iOS, OSX, Android</li>
     </ul>
 </div>
