--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,12 @@ layout: default
 <div id="resume">
     <h3>Félix Voituret - Software engineer (<a href="http://faylixe.fr/download/documents/resume.pdf">PDF version</a>)</h3>
     <h1>Work history</h1>
-    <h2><span class="title">Research and development engineer</span> - <i>Kware, Aix en provence, France (September 2013 - Present)</i></h2>
+    <h2><span class="title">Technical expert</span> - <i>CGI, Lyon, France (May 2018 - Present)</i></h2>
+    <ul>
+        <li>Contributed to big data environment for Enedis electricity provider</li>
+        <li>Maintained and developped middleware solutions for Enedis electricity provider</li>
+    </ul>
+    <h2><span class="title">Research and development engineer</span> - <i>Kware, Aix en provence, France (September 2013 - April 2018)</i></h2>
     <ul>
         <li>Developed Eclipse plugins to improve documentation and coding process.</li>
         <li>Developed JUnit extension for providing server based test environment.</li>
@@ -16,7 +21,7 @@ layout: default
         <li>Developed internal indexing API and integrated Apache Lucene and Apache Solr engines.</li>
         <li>Redesigned internal DAO solution using previously developed indexing API.</li>
     </ul>
-    <h2><span class="title">Teacher</span> - <i>Université d’Avignon et des Pays de Vaucluse, Avignon, France (September 2013 - Present)</i></h2>
+    <h2><span class="title">Teacher</span> - <i>Université d’Avignon et des Pays de Vaucluse, Avignon, France (September 2013 - April 2018)</i></h2>
     <ul><li>Delivered software engineering course and testing course for master degree, 30 hours per year.</li></ul>
     <h2><span class="title">Research assistant</span> - <i>LIA, Avignon, France (June 2011 - July 2013)</i></h2>
     <ul>
